Fix header text placement on mobile

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -62,9 +62,7 @@ html {
 	height: auto;
 }
 
-@media 
-  (-webkit-min-device-pixel-ratio: 2), 
-  (min-resolution: 192dpi) { 
+@media (max-aspect-ratio: 1/1) { 
   .container-image {
     width: unset;
   }
